<resources>
    <string name="app_name">AhmerPdfium</string>

    <!-- Miscellaneous strings -->
    <string name="error_loading_pdf">Error loading PDF document</string>

    <string name="menu_pdf_delete">Delete File</string>
    <string name="menu_pdf_goto_page">Goto Page Number</string>
    <string name="menu_pdf_file_info">File Info</string>
    <string name="menu_pdf_night_mode">Night Mode</string>
    <string name="menu_pdf_print_file">Print File</string>
    <string name="menu_pdf_view_horizontal">Horizontal View</string>
    <string name="menu_pdf_view_vertical">Vertical View</string>
    <string name="menu_pdf_share">Share File</string>
    <string name="menu_pdf_disable_snap_page">Disable Snap Page</string>
    <string name="menu_pdf_enable_snap_page">Enable Snap Page</string>

    <string name="menu_pdf_search">Search</string>
    <string name="under_progress">This feature is under progress</string>
    <string name="empty_description">Empty Description</string>
    <string name="searching">Search…</string>
    <string name="normal_fragment">Normal Fragment</string>
    <string name="normal_activity">Normal Activity</string>
    <string name="protected_fragment">Protected Fragment</string>
    <string name="protected_activity">Protected Activity</string>

    <!-- DialogPDFInfo strings -->
    <string name="heading_document_info">Document Info</string>
    <string name="title_author">Author:</string>
    <string name="title_creation_date">Creation Date:</string>
    <string name="title_creator_of">Creator Of:</string>
    <string name="title_keywords">Keywords:</string>
    <string name="title_modify_date">Modify Date:</string>
    <string name="title_pdf_file_path">File Path:</string>
    <string name="title_pdf_file_size">File Size:</string>
    <string name="title_producer_of">Producer Of:</string>
    <string name="title_subject">Subject:</string>
    <string name="title_title">Title:</string>
    <string name="title_total_pages">Total Pages:</string>

    <!-- DialogPDFJumpTo strings -->
    <string name="button_go_to">Go To</string>
    <string name="enter_number">Enter page number</string>
    <string name="desc_jump_to_page">Enter the page number to which you want to move</string>
    <string name="no_page">No page found in this document</string>
    <string name="please_enter_number">Please enter a number page</string>

    <!-- DialogPDFPassword strings -->
    <string name="button_open_pdf">Open</string>
    <string name="enter_password">Enter password here</string>
    <string name="password_not_empty">Password should not be empty</string>
    <string name="password_not_space">Password should not be only space(s)</string>
    <string name="desc_pdf_protected">This file is password protected.\nPlease enter the password to open PDF file</string>

    <!-- strings.xml -->
    <string name="search_hint">Search...</string>
    <string name="match_case">Aa</string>
    <string name="whole_word">Whole</string>
    <string name="previous_result">Previous result</string>
    <string name="next_result">Next result</string>
    <string name="close_search">Close search</string>
    <string name="search_counter_format">%1$d/%2$d</string>
</resources>