<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuNightMode"
        android:icon="@drawable/ic_baseline_dark_mode"
        android:title="@string/menu_pdf_night_mode"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuJumpTo"
        android:icon="@drawable/ic_menu_pdf_goto"
        android:title="@string/menu_pdf_goto_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuPageSnap"
        android:icon="@drawable/ic_baseline_pages"
        android:title="@string/menu_pdf_disable_snap_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSwitchView"
        android:icon="@drawable/ic_baseline_swipe_horiz"
        android:title="@string/menu_pdf_view_horizontal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuInfo"
        android:icon="@drawable/ic_baseline_info"
        android:title="@string/menu_pdf_file_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuDeletePage"
        android:title="Delete Page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSaveCopy"
        android:title="Save As Copy"
        app:showAsAction="ifRoom" />
</menu>