<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        card_view:cardMaxElevation="8dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/heading_document_info"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_title"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_author"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_total_pages"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_subject"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_keywords"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvKeywords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_creation_date"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCreationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_modify_date"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvModifyDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_creator_of"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:singleLine="false"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_producer_of"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvProducer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_pdf_file_size"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFileSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/title_pdf_file_path"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFilePath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/empty_description"
                    android:textAppearance="@style/Rose.TextAppearance.Caption"
                    android:textColor="@android:color/black" />
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:gravity="end">

                <Button
                    android:id="@+id/tvOk"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@android:string/ok"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Rose.TextAppearance.Normal"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>