<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ahmer.reb.dialogs.PdfPassword">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/dialog_image_width_height"
                    android:layout_height="@dimen/dialog_image_width_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_lock"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivLogo"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/desc_pdf_protected"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDescription"
                    android:fontFamily="@font/roboto"
                    android:padding="@dimen/margins_or_padding_10"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    app:passwordToggleDrawable="@drawable/selector_visible_icon"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLines="2"
                        android:minHeight="48dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnOpen"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/button_open_pdf"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_toStartOf="@id/btnOpen"
                    android:text="@android:string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnOpen"
                    app:layout_constraintTop_toBottomOf="@+id/inputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>